# interview

./: .env  .gitignore  .projectrc  About.md  README.md  TAGS  backlog.md  createsuperuserprod.sh  docker-compose.yml  pyproject.toml  requirements.txt  rundev.py  runprod.sh
Devops/: Dockerfile-python  docker-compose-prod.yml
app/: urls.py
app/settings/: base.py  dev.py
base/: admin.py  apps.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_auto_20200722_1550.py  0003_auto_20200816_2208.py  0004_auto_20200816_2208.py
base/templates/base/: base.html  login.html
interview/: admin.py  forms.py  models.py  urls.py  views.py
interview/migrations/: 0001_initial.py  0002_question_weight.py  0003_template_questions.py  0004_interview_comments.py  0005_auto_20200730_0858.py  0006_auto_20200816_2208.py  0007_interview_interviewer_score.py
interview/static/: style.css
interview/templates/interview/: conclusion.html  evaluation.html  observations.html  review.html  setup.html  template_upload.html
sandbox/: charts.html
viz/: forms.py  stats.py  tests.py  urls.py  views.py
viz/static/viz/: charts.js
viz/templates/viz/: base.html  compare.html  detail.html  list.html
