[tool.poetry]
name = "telefonica-copetency-base"
version = "0.1.0"
description = "App to manage Telefonica's employee knowledge base"
authors = ["Bruno Gomes"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"
psycopg2 = "^2.8.5"
django-filter = "^2.3.0"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.15.0"
ipdb = "^0.13.2"
django-extensions = "^2.2.9"
django-debug-toolbar = "^2.2"
poetry = "^1.0.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
